@@ -1,14 +1,20 @@
 package com.curso.config;
 
-import org.springframework.core.env.Environment;
-import org.springframework.beans.factory.annotation.Autowired;
+import com.curso.Services.UserDetailsServiceImpl;
+import com.curso.security.JWTAuthenticationFilter;
+import com.curso.security.JWTUtils;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.core.env.Environment;
+import org.springframework.security.authentication.AuthenticationManager;
+import org.springframework.security.config.annotation.authentication.builders.AuthenticationManagerBuilder;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
+import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
+import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
@@ -16,51 +22,65 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import java.util.Arrays;
 import java.util.List;
 
-import static org.springframework.security.config.Customizer.withDefaults;
-
-@EnableWebSecurity
 @Configuration
+@EnableWebSecurity
 public class SecurityConfig {
 
-    private static final String[] PUBLIC_URLS = {"/h2-console/**"};
-    @Autowired
-    private Environment env; //pega o ambiente que o app esta sendo executado
+    private static final String[] PUBLIC_URLS = {"/h2-console/**","/auth/**","/login"};
+
+    private final Environment env;
+    private final JWTUtils jwtUtils;
+    private final UserDetailsServiceImpl userDetailsService;
+
+    public SecurityConfig(Environment env, JWTUtils jwtUtils, UserDetailsServiceImpl userDetailsService) {
+        this.env = env;
+        this.jwtUtils = jwtUtils;
+        this.userDetailsService = userDetailsService;
+    }
 
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
-
-        if(Arrays.asList(env.getActiveProfiles()).contains("test")){
-            // Desabilita o frameOptions para permitir o H2 Console
+        if (Arrays.asList(env.getActiveProfiles()).contains("test")) {
             http.headers(headers -> headers.frameOptions(frameOptions -> frameOptions.disable()));
         }
 
         http
-            .cors(cors -> cors.configurationSource(corsConfigurationSource())) // Habilita o suporte ao CORS
-            .sessionManagement(session -> session
-                    .sessionCreationPolicy(SessionCreationPolicy.STATELESS)) //Def. política de sessão como STATELESS
-            .authorizeHttpRequests(authorize ->
-                    authorize.requestMatchers(PUBLIC_URLS).permitAll() // Permite acesso às URLs públicas
-                             .anyRequest().authenticated()) // Exige autenticação para qualquer outra requisição
-            .csrf(csrf -> csrf.ignoringRequestMatchers(PUBLIC_URLS)) //desabilita CSRF p/ o h2-console
-            .formLogin(withDefaults()); // Configura o login padrão
+                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+                .authorizeHttpRequests(authorize -> authorize
+                        .requestMatchers(PUBLIC_URLS).permitAll()
+                        .anyRequest().authenticated())
+                .csrf(csrf -> csrf.disable());
+
+        http.addFilterBefore(new JWTAuthenticationFilter(jwtUtils, userDetailsService),
+                UsernamePasswordAuthenticationFilter.class);
+
+
         return http.build();
     }
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("http://localhost:3000")); // Define as origens permitidas
-        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS")); // Métodos HTTP permitidos
-        configuration.setAllowedHeaders(List.of("Authorization", "Content-Type")); // Cabeçalhos permitidos
-        configuration.setAllowCredentials(true); // Permitir credenciais (cookies, autenticação básica)
+        configuration.setAllowedOrigins(Arrays.asList("*")); // Permite todas as origens
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS")); // Permite os métodos especificados
+        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type")); // Permite os cabeçalhos especificados
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration); // Aplica as configurações para todas as rotas
+        source.registerCorsConfiguration("/**", configuration); // Aplica a configuração para todas as rotas
         return source;
     }
 
     @Bean
-    public BCryptPasswordEncoder bCryptPasswordEncoder(){
+    public AuthenticationManager authenticationManager(HttpSecurity http) throws Exception {
+        AuthenticationManagerBuilder authenticationManagerBuilder =
+                http.getSharedObject(AuthenticationManagerBuilder.class);
+        authenticationManagerBuilder.userDetailsService(userDetailsService).passwordEncoder(passwordEncoder());
+        return authenticationManagerBuilder.build();
+    }
+
+    @Bean
+    public PasswordEncoder passwordEncoder() {
         return new BCryptPasswordEncoder();
     }
 
